# tareas-consola

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml
datos/: tareas.json  usuarios.csv
src/: acceso.py  constantes.py  controlador.py  navegacion.py  repositorio.py  schemas.py  servicios.py  utils.py  vistas.py
src/definiciones/: constantes.py  schemas.py
src/lib/: archivos.py  consola.py  helpers.py
src/plantilla/: index.html
src/utilidades/: archivos.py  consola.py  helpers.py
