[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tareapp"
version = "0.1.0"
dependencies = [
    "markdown-it-py",
    "mdurl",
    "Pygments",
    "rich"
]

[tool.setuptools]
py-modules = ["main"]
packages = ["src", "src.lib", "src.definiciones"]

[project.scripts]
tareapp = "main:main"